--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,15 @@ version: "3.4"  # optional since v1.27.0
 services:
   app:
     container_name: app
+    build: ./UI
+    volumes: 
+      - './UI/src/app'
     ports:
       -  "4200:4200"
     depends_on: 
       - api
+    command: 
+      bash -c "npm install && ng serve --host 0.0.0.0 --port 4200"
   api:
     container_name: api
     build: ./Backend
@@ -28,6 +33,9 @@ services:
   ml:
     container_name: ml
     build: ./ML
+    ports:
+      - "6006:6006"
     depends_on: 
-    - db
+      - db
+
 
